--- a/pom.xml
+++ b/pom.xml
@@ -75,13 +75,21 @@
             <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
-
+        <!--引入thymeleaf的依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.32</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -128,5 +136,4 @@
             </releases>
         </pluginRepository>
     </pluginRepositories>
-
 </project>
